scripts/cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  StackPrefix:
    Type: 'String'
    Default: 'example'

  VpcCidr:
    Type: 'String'
    Default: '10.0.0.0/16'

  PublicSubnet0Cidr:
    Type: 'String'
    Default: '10.0.0.0/24'
  PublicSubnet1Cidr:
    Type: 'String'
    Default: '10.0.1.0/24'
  PublicSubnet2Cidr:
    Type: 'String'
    Default: '10.0.2.0/24'

  PrivateSubnet0Cidr:
    Type: 'String'
    Default: '10.0.10.0/24'
  PrivateSubnet1Cidr:
    Type: 'String'
    Default: '10.0.11.0/24'
  PrivateSubnet2Cidr:
    Type: 'String'
    Default: '10.0.12.0/24'

  DBInstanceClass:
    Type: 'String'
    Default: 'db.t2.small'

  DatabaseName:
    #XXX: productionの場合はSecretManager推奨
    # Type: 'AWS::SSM::Parameter::Value<String>'
    Type: 'String'
    Default: 'example'

  MasterUsername:
    # Type: 'AWS::SSM::Parameter::Value<String>'
    Type: 'String'
    Default: 'dbuser'

  MasterUserPassword:
    # Type: 'AWS::SSM::Parameter::Value<String>'
    Type: 'String'
    Default: 'password'
    NoEcho: true

  #XXX: 拡張モニタリングの間隔(秒)。0を指定すると拡張モニタリングが無効に。
  #   有効な値：0, 1, 5, 10, 15, 30, 60
  MonitoringInterval:
    Type: 'Number'
    Default: 30
    AllowedValues:
      - 0
      - 1
      - 5
      - 10
      - 15
      - 30
      - 60

  DomainName:
    Type: 'String'
    Default: 'ponkotu.me'

  ImageTag:
    Type: 'String'
    Default: 'latest'

  AppName:
    Type: 'String'
    Default: 'ci-cd-example'
  AppEnv:
    Type: 'String'
    Default: 'development'
  AppKey:
    # Type: 'AWS::SSM::Parameter::Value<String>'
    Type: 'String'
    Default: 'base64:IsVcCI7S9qDrpzpSodvHqPWFExdJvhlKgQf2q94IOLQ='
    NoEcho: true
  AppDebug:
    Type: 'String'
    Default: 'true'

  LogChannel:
    Type: 'String'
    Default: 'stack'

  DbName:
    # Type: 'AWS::SSM::Parameter::Value<String>'
    Type: 'String'
    Default: 'example'
  DbUser:
    # Type: 'AWS::SSM::Parameter::Value<String>'
    Type: 'String'
    Default: 'dbuser'
  DbPass:
    # Type: 'AWS::SSM::Parameter::Value<String>'
    Type: 'String'
    Default: 'password'
    NoEcho: true

Resources:
  ##################################################
  # VPC
  ##################################################
  Vpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: 'Name'
        Value: !Sub 'vpc-${StackPrefix}'

  ##################################################
  # VPC FlowLog
  ##################################################
  VpcFlowlogIam:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument: |
        {
          "Statement": [{
            "Effect": "Allow",
            "Action": "sts:AssumeRole",
            "Principal": {
              "Service": "vpc-flow-logs.amazonaws.com"
            }
          }]
        }
      Policies:
        - PolicyName: !Sub '${StackPrefix}-vpcflowlog'
          PolicyDocument: |
            {
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:DescribeLogGroups",
                    "logs:DescribeLogStreams"
                  ],
                  "Resource": "*"
                }
              ]
            }

  VpcFlowlog:
    DependsOn: VpcFlowlogLogGroup
    Type: 'AWS::EC2::FlowLog'
    Properties:
      DeliverLogsPermissionArn: !GetAtt VpcFlowlogIam.Arn
      LogGroupName: !Sub '/${StackPrefix}/vpc/flow'
      ResourceId: !Ref Vpc
      ResourceType: 'VPC'
      TrafficType: 'ALL'

  VpcFlowlogLogGroup:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Sub '/${StackPrefix}/vpc/flow'
      RetentionInDays: 30

  ##################################################
  # Public Network
  ##################################################
  # Subnet
  SubnetPublic0:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnet0Cidr
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
      - Key: 'Name'
        Value: !Sub 'sb-${StackPrefix}-public0'

  SubnetPublic1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnet1Cidr
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: 'Name'
        Value: !Sub 'sb-${StackPrefix}-public1'

  SubnetPublic2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnet2Cidr
      AvailabilityZone: !Select [2, !GetAZs '']
      Tags:
      - Key: 'Name'
        Value: !Sub 'sb-${StackPrefix}-public2'

  # Route Table
  RouteTablePublic0:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
      - Key: 'Name'
        Value: !Sub 'rtb-${StackPrefix}-public0'

  RouteTablePublic1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
      - Key: 'Name'
        Value: !Sub 'rtb-${StackPrefix}-public1'

  RouteTablePublic2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
      - Key: 'Name'
        Value: !Sub 'rtb-${StackPrefix}-public2'

  # Assign subnet to route table
  AssignSubnetPublic0ToRouteTablePublic0:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePublic0
      SubnetId: !Ref SubnetPublic0

  AssignSubnetPublic1ToRouteTablePublic1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePublic1
      SubnetId: !Ref SubnetPublic1

  AssignSubnetPublic2ToRouteTablePublic2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePublic2
      SubnetId: !Ref SubnetPublic2

  # Internet Gateway
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
      - Key: 'Name'
        Value: !Sub 'igw-${StackPrefix}'
  InternetGatewayAttach:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  # Attache Internet Gateway
  AttachIGWToRouteTablePublic0:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      RouteTableId: !Ref RouteTablePublic0
      GatewayId: !Ref InternetGateway

  AttachIGWToRouteTablePublic1:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      RouteTableId: !Ref RouteTablePublic1
      GatewayId: !Ref InternetGateway

  AttachIGWToRouteTablePublic2:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      RouteTableId: !Ref RouteTablePublic2
      GatewayId: !Ref InternetGateway

  ##################################################
  # Private Network
  ##################################################
  # Subnet
  SubnetPrivate0:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnet0Cidr
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
      - Key: 'Name'
        Value: !Sub 'sb-${StackPrefix}-private0'

  SubnetPrivate1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnet1Cidr
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: 'Name'
        Value: !Sub 'sb-${StackPrefix}-private1'

  SubnetPrivate2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnet2Cidr
      AvailabilityZone: !Select [2, !GetAZs '']
      Tags:
      - Key: 'Name'
        Value: !Sub 'sb-${StackPrefix}-private2'

  # Route Table
  RouteTablePrivate0:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
      - Key: 'Name'
        Value: !Sub 'rtb-${StackPrefix}-private0'

  RouteTablePrivate1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
      - Key: 'Name'
        Value: !Sub 'rtb-${StackPrefix}-private1'

  RouteTablePrivate2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
      - Key: 'Name'
        Value: !Sub 'rtb-${StackPrefix}-private2'

  # Assign subnet to route table
  AssignSubnetPrivate0ToRouteTablePrivate0:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePrivate0
      SubnetId: !Ref SubnetPrivate0

  AssignSubnetPrivate1ToRouteTablePrivate1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePrivate1
      SubnetId: !Ref SubnetPrivate1

  AssignSubnetPrivate2ToRouteTablePrivate2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTablePrivate2
      SubnetId: !Ref SubnetPrivate2

  # Nat Gateway
  EIPPublic0:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: 'vpc'
  NatGatewayPublic0:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPPublic0.AllocationId
      SubnetId: !Ref SubnetPublic0
      Tags:
      - Key: 'Name'
        Value: !Sub 'ngw-${StackPrefix}-public0'

  EIPPublic1:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: 'vpc'
  NatGatewayPublic1:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPPublic1.AllocationId
      SubnetId: !Ref SubnetPublic1
      Tags:
      - Key: 'Name'
        Value: !Sub 'ngw-${StackPrefix}-public1'

  EIPPublic2:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: 'vpc'
  NatGatewayPublic2:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPPublic2.AllocationId
      SubnetId: !Ref SubnetPublic2
      Tags:
      - Key: 'Name'
        Value: !Sub 'ngw-${StackPrefix}-public2'

  # Mount Nat Gateway
  MountNatGatewayToRouteTablePrivate0:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivate0
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayPublic0

  MountNatGatewayToRouteTablePrivate1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivate1
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayPublic1

  MountNatGatewayToRouteTablePrivate2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivate2
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayPublic2

  ##################################################
  # Security Group
  ##################################################
  SecurityGroupAlb:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: !Sub 'sg ${StackPrefix} alb'
      VpcId: !Ref Vpc
      Tags:
        - Key: 'Name'
          Value: !Sub 'sg-${StackPrefix}-alb'
      SecurityGroupIngress:
        #XXX: ALB Listenerで301リダイレクトをする場合全公開するしか無い
        #       HTTPのトラフィックはアプリケーションへ流さず、社内ネットワークはHTTPSで制限をする
        - CidrIp: '0.0.0.0/0'
          IpProtocol: 'tcp'
          FromPort: 80
          ToPort: 80
        # VCP Cidr
        - CidrIp: '0.0.0.0/0'
          IpProtocol: 'tcp'
          FromPort: 443
          ToPort: 443

  SecurityGroupAurora:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: !Sub 'sg ${StackPrefix} aurora'
      VpcId: !Ref Vpc
      Tags:
        - Key: 'Name'
          Value: !Sub 'sg-${StackPrefix}-aurora'
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref SecurityGroupEcsApp
          IpProtocol: 'tcp'
          FromPort: 3306
          ToPort: 3306

  SecurityGroupEcsApp:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: !Sub 'sg ${StackPrefix} ecs app'
      VpcId: !Ref Vpc
      Tags:
        - Key: 'Name'
          Value: !Sub 'sg-${StackPrefix}-app'
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref SecurityGroupAlb
          IpProtocol: 'tcp'
          FromPort: 80
          ToPort: 80

  ##################################################
  # Aurora
  ##################################################
  # 拡張モニタリング用Role
  MonitoringRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument: |
        {
          "Statement": [{
            "Effect": "Allow",
            "Action": "sts:AssumeRole",
            "Principal": {
              "Service": "monitoring.rds.amazonaws.com"
            }
          }]
        }
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonRDSEnhancedMonitoringRole'

  ClusterParameterGroup:
    Type: 'AWS::RDS::DBClusterParameterGroup'
    Properties:
      Description: !Sub 'Aurora MySQL parameter group from ${AWS::StackName}'
      Family: 'aurora-mysql5.7'
      Parameters:
        character_set_database: 'utf8mb4'
        character_set_server: 'utf8mb4'
        character_set_results: 'utf8mb4'
        character_set_connection: 'utf8mb4'
        character_set_client: 'utf8mb4'

  SubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: !Sub 'Aurora Subnet Group from ${AWS::StackName}'
      SubnetIds:
        - !Ref SubnetPrivate0
        - !Ref SubnetPrivate1
        - !Ref SubnetPrivate2

  #TODO: AutoScale
  AuroraCluster:
    Type: 'AWS::RDS::DBCluster'
    Properties:
      Engine: 'aurora-mysql'
      DatabaseName: !Ref DatabaseName
      DBClusterParameterGroupName: !Ref ClusterParameterGroup
      DBSubnetGroupName: !Ref SubnetGroup
      MasterUserPassword: !Ref MasterUserPassword
      MasterUsername: !Ref MasterUsername
      VpcSecurityGroupIds:
        - !Ref SecurityGroupAurora

  AuroraInstance0:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      Engine: 'aurora-mysql'
      DBClusterIdentifier: !Ref AuroraCluster
      DBInstanceClass: !Ref DBInstanceClass
      DBSubnetGroupName: !Ref SubnetGroup
      MonitoringInterval: !Ref MonitoringInterval
      MonitoringRoleArn: !GetAtt MonitoringRole.Arn

  AuroraInstance1:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      Engine: 'aurora-mysql'
      DBClusterIdentifier: !Ref AuroraCluster
      DBInstanceClass: !Ref DBInstanceClass
      DBSubnetGroupName: !Ref SubnetGroup
      MonitoringInterval: !Ref MonitoringInterval
      MonitoringRoleArn: !GetAtt MonitoringRole.Arn

  ##################################################
  # ALB
  ##################################################
  #TODO: ACMのWebコンソールから手動で操作する必要有り
  Acm:
    Type: 'AWS::CertificateManager::Certificate'
    Properties:
      DomainName: !Ref DomainName
      DomainValidationOptions:
      - DomainName: !Ref DomainName
        ValidationDomain: !Ref DomainName
      ValidationMethod: DNS

  Alb:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Type: 'application'
      Name: !Sub 'alb-${StackPrefix}'
      IpAddressType: 'ipv4'
      Scheme: 'internet-facing'
      Subnets:
        - !Ref SubnetPublic0
        - !Ref SubnetPublic1
        - !Ref SubnetPublic2
      SecurityGroups:
        - !Ref SecurityGroupAlb

  #XXX: httpへのリクエストを全て443へリダイレクト
  AlbListenerHttp:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: 'redirect'
          RedirectConfig:
            StatusCode: 'HTTP_301'
            Protocol: 'HTTPS'
            Port: 443
      LoadBalancerArn: !Ref Alb
      Port: 80
      Protocol: 'HTTP'

  #XXX: 443はデフォルトで503エラーを返す
  AlbListenerHttps:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      Certificates:
        - CertificateArn: !Ref Acm
      DefaultActions:
        - Type: 'fixed-response'
          FixedResponseConfig:
            StatusCode: 503
      LoadBalancerArn: !Ref Alb
      Port: 443
      Protocol: 'HTTPS'

  ##################################################
  # ECS Cluster
  ##################################################
  EcsCluster:
    Type: 'AWS::ECS::Cluster'
    Properties:
      ClusterName: !Sub '${StackPrefix}-cluster'

  ##################################################
  # ECS Service
  ##################################################
  AlbTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub 'tg-${StackPrefix}'
      VpcId: !Ref Vpc
      Port: 80
      Protocol: 'HTTP'
      TargetType: 'ip'
      # HealthCheck
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: '/'
      HealthCheckPort: 80
      HealthCheckProtocol: 'HTTP'
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 2
      Matcher:
        HttpCode: '200-399'

  AlbListener:
    Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
    Properties:
      Actions:
        - Type: 'forward'
          TargetGroupArn: !Ref AlbTargetGroup
      Conditions:
        - Field: 'path-pattern'
          Values: ['*']
      ListenerArn: !Ref AlbListenerHttps
      Priority: 10

  EcsTaskIam:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument: |
        {
          "Statement": [{
            "Effect": "Allow",
            "Action": "sts:AssumeRole",
            "Principal": {
              "Service": "ecs-tasks.amazonaws.com"
            }
          }]
        }
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'

  # Log Group
  EcsTaskLogGroup:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Sub '/${StackPrefix}/ecs/app'
      RetentionInDays: 7

  EcsTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: !Sub '${StackPrefix}-app'
      Cpu: '256'
      Memory: '0.5GB'
      NetworkMode: 'awsvpc'
      RequiresCompatibilities: ['FARGATE']
      ExecutionRoleArn: !Ref EcsTaskIam
      TaskRoleArn: !Ref EcsTaskIam
      ContainerDefinitions:
        # nginx
        - Name: 'nginx'
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/nginx:${ImageTag}'
          MemoryReservation: 64
          Essential: true
          PortMappings:
          - HostPort: 80
            Protocol: 'tcp'
            ContainerPort: 80
          LogConfiguration:
            LogDriver: 'awslogs'
            Options:
              awslogs-group: !Sub '/${StackPrefix}/ecs/app'
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: 'nginx'
          Environment:
            - Name: 'PHP_HOST'
              Value: '127.0.0.1'

        # Web
        - Name: 'web'
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/web:${ImageTag}'
          MemoryReservation: 256
          Essential: true
          LogConfiguration:
            LogDriver: 'awslogs'
            Options:
              awslogs-group: !Sub '/${StackPrefix}/ecs/app'
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: 'web'
          Environment:
            - Name: 'APP_NAME'
              Value: !Ref AppName
            - Name: 'APP_ENV'
              Value: !Ref AppEnv
            - Name: 'APP_KEY'
              Value: !Ref AppKey
            - Name: 'APP_DEBUG'
              Value: !Ref AppDebug
            - Name: 'LOG_CHANNEL'
              Value: !Ref LogChannel
            - Name: 'DB_HOST'
              Value: !GetAtt AuroraCluster.Endpoint.Address
            - Name: 'DB_DATABASE'
              Value: !Ref DbName
            - Name: 'DB_USERNAME'
              Value: !Ref DbUser
            - Name: 'DB_PASSWORD'
              Value: !Ref DbPass

  EcsService:
    Type: 'AWS::ECS::Service'
    Properties:
      TaskDefinition: !Ref EcsTaskDefinition
      DesiredCount: 1
      LaunchType: 'FARGATE'
      NetworkConfiguration:
        AwsvpcConfiguration:
          SecurityGroups:
            - !Ref SecurityGroupEcsApp
          Subnets:
            - !Ref SubnetPrivate0
            - !Ref SubnetPrivate1
            - !Ref SubnetPrivate2
      Cluster: !Ref EcsCluster
      LoadBalancers:
        - TargetGroupArn: !Ref AlbTargetGroup
          ContainerPort: 80
          ContainerName: 'nginx'

  ##################################################
  # CD
  ##################################################
  CodeBuildLogGroup:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Sub '/aws/codebuild/${StackPrefix}'
      RetentionInDays: 7

  CodePipelineArtifactBucket:
    Type: 'AWS::S3::Bucket'
    DeletionPolicy: 'Retain'

  CodeBuildRole:
    DependsOn: [CodeBuildLogGroup, CodePipelineArtifactBucket]
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action: ['sts:AssumeRole']
            Effect: 'Allow'
            Principal:
              Service: ['codebuild.amazonaws.com']
      Policies:
        - PolicyName: "CodeBuildCustomPolicy"
          PolicyDocument: !Sub |
            {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Action": [
                    "s3:GetObject",
                    "s3:GetObjectVersion",
                    "s3:PutObject"
                  ],
                  "Resource": [
                    "arn:aws:s3:::${CodePipelineArtifactBucket}/*"
                  ],
                  "Effect": "Allow"
                },
                {
                  "Action": [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents"
                  ],
                  "Resource": [
                    "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${StackPrefix}",
                    "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${StackPrefix}:*"
                  ],
                  "Effect": "Allow"
                },
                {
                  "Action": [
                    "ecr:BatchCheckLayerAvailability",
                    "ecr:CompleteLayerUpload",
                    "ecr:InitiateLayerUpload",
                    "ecr:PutImage",
                    "ecr:UploadLayerPart"
                  ],
                  "Resource": [
                    "arn:aws:ecr:${AWS::Region}:${AWS::AccountId}:repository/web"
                  ],
                  "Effect": "Allow"
                },
                {
                  "Action": [
                    "ecr:GetAuthorizationToken"
                  ],
                  "Resource": [
                    "*"
                  ],
                  "Effect": "Allow"
                }
              ]
            }

  CodeBuildProject:
    Type: 'AWS::CodeBuild::Project'
    Properties:
      Name: !Sub '${StackPrefix}'
      ServiceRole: !GetAtt CodeBuildRole.Arn
      Environment:
        Type: 'LINUX_CONTAINER'
        ComputeType: 'BUILD_GENERAL1_SMALL'
        Image: 'aws/codebuild/docker:17.09.0'
        PrivilegedMode: true
      Source:
        Type: 'CODEPIPELINE'
        BuildSpec: |
            version: 0.2
            phases:
              build:
                commands:
                  - sudo apt -y update && sudo apt -y install jq
                  - printf '[{"name":"web","imageUri":"%s"}]' $(cat imageDetail.json | jq -r '.ImageURI') > imageManifest.json
            artifacts:
              files:
                - imageManifest.json
      Artifacts:
        Type: 'CODEPIPELINE'
      TimeoutInMinutes: 30

  CodePipelineRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action: ['sts:AssumeRole']
            Effect: 'Allow'
            Principal:
              Service: ['codepipeline.amazonaws.com']
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AWSCodePipelineFullAccess
        - arn:aws:iam::aws:policy/AWSCodeBuildDeveloperAccess
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryPowerUser
      Policies:
        - PolicyName: "DataSourceAccess"
          PolicyDocument: !Sub |
            {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Action": [
                    "s3:PutObject"
                  ],
                  "Resource": [
                    "arn:aws:s3:::${CodePipelineArtifactBucket}/*"
                  ],
                  "Effect": "Allow"
                },
                {
                  "Action": [
                    "ecs:*"
                  ],
                  "Resource": [
                    "*"
                  ],
                  "Effect": "Allow"
                }
              ]
            }

  CodePipeline:
    Type: 'AWS::CodePipeline::Pipeline'
    Properties:
      ArtifactStore:
        Location: !Ref CodePipelineArtifactBucket
        Type: 'S3'
      Name: !Sub '${StackPrefix}-Pipeline'
      RoleArn: !GetAtt CodePipelineRole.Arn
      Stages:
        - Name: 'Source'
          Actions:
            - Name: 'Source'
              RunOrder: 1
              ActionTypeId:
                Category: 'Source'
                Owner: 'AWS'
                Provider: 'ECR'
                Version: '1'
              Configuration:
                RepositoryName: 'web'
              OutputArtifacts:
                - Name: 'Source'

        - Name: 'Build'
          Actions:
            - Name: 'Build'
              RunOrder: 1
              InputArtifacts:
                - Name: 'Source'
              ActionTypeId:
                Category: 'Build'
                Owner: 'AWS'
                Provider: 'CodeBuild'
                Version: '1'
              Configuration:
                ProjectName: !Ref CodeBuildProject
              OutputArtifacts:
                - Name: 'Build'

        # - Name: 'PreDeploy'
        #   Actions:
        #     - Name: 'CreateChangeSet'
        #       RunOrder: 1
        #       InputArtifacts:
        #         - Name: 'Source'
        #         - Name: 'Build'
        #       ActionTypeId:
        #         Category: 'Deploy'
        #         Owner: 'AWS'
        #         Provider: 'CloudFormation'
        #         Version: '1'
        #       Configuration:
        #         ActionMode: 'CHANGE_SET_REPLACE'
        #         ChangeSetName: !Sub '${AWS::StackName}-PreDeploy'
        #         StackName: !Sub '${StackName}-ecs-service'
        #         Capabilities: 'CAPABILITY_NAMED_IAM'
        #         TemplatePath: 'Source::aws/ecs-service.yaml'
        #         RoleArn: !GetAtt CodePipelineCFnDeployRole.Arn
        #         ParameterOverrides: !Sub |
        #           {
        #             "ImageTag": { "Fn::GetParam" : [ "Build", "build.json", "tag" ] }
        #           }
        # #XXX: 継続的デリバリにしたい場合はコメントアウトする
        # # - Name: Approve
        # #   Actions:
        # #     - Name: Approve
        # #       RunOrder: 1
        # #       ActionTypeId:
        # #         Category: Approval
        # #         Owner: AWS
        # #         Provider: Manual
        # #         Version: '1'

        - Name: 'Deploy'
          Actions:
            - Name: 'Deploy'
              RunOrder: 1
              InputArtifacts:
                - Name: 'Build'
              ActionTypeId:
                Category: 'Deploy'
                Owner: 'AWS'
                Provider: 'ECS'
                Version: '1'
              Configuration:
                ClusterName: !Ref EcsCluster
                ServiceName: !GetAtt EcsService.Name
                FileName: 'imageManifest.json'


  # ECRのpushを監視するための CloudWatchEvent
  CloudWatchEventECRRuleRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action: ['sts:AssumeRole']
            Effect: 'Allow'
            Principal:
              Service: ['events.amazonaws.com']
      Policies:
        - PolicyName: "CodePipeline-Execution"
          PolicyDocument: !Sub |
            {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "codepipeline:StartPipelineExecution"
                  ],
                  "Resource": [
                    "arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipeline}"
                  ]
                }
              ]
            }

  CloudWatchEventECRRule:
    Type: 'AWS::Events::Rule'
    Properties:
      Description: 'EventRule'
      State: "ENABLED"
      EventPattern: !Sub |
        {
          "source": [
            "aws.ecr"
          ],
          "detail": {
            "eventName": [
              "PutImage"
            ],
            "requestParameters": {
              "repositoryName": [
                "web"
              ]
            }
          }
        }
      Targets:
        - RoleArn: !GetAtt CloudWatchEventECRRuleRole.Arn
          Arn: !Sub 'arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipeline}'
          Id: !Ref CodePipeline
